samples/_failures_safe/1761563624_15064d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61239b2a.c: In function ‘main’:
./samples/SAFE/__tmp_61239b2a.c:167:12: error: missing terminating " character
  167 |     printf("---------- ---------- -----------------
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_61239b2a.c:167:5: error: expected expression at end of input
  167 |     printf("---------- ---------- -----------------
      |     ^~~~~~
./samples/SAFE/__tmp_61239b2a.c:167:5: error: expected declaration or statement at end of input
